2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* laden.h (program_name): Change type to char *.
	* laden.c (program_name): Likewise.
	* shutdown.h (program_name): Likewise.
	* output.h (debug): Change program_name's type to char *.

2008-02-08  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am (laden_LDADD): Link against newlib's `libc-routines.a'.

2008-02-06  Neal H. Walfield  <neal@gnu.org>

	* output-serial.c (serial_init): Rewrite command-line parser to
	not use strtok.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (laden_LDADD): Set to ../libc-parts/libc-kernel.a,
	not ../libc-parts/libc-parts.a.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (laden_CPPFLAGS): Add -DS_PRINTF=printf.

2007-12-24  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (cmain): Cast PROGRAM_NAME to elide gcc warning.

2007-12-23  Neal H. Walfield  <neal@gnu.org>

	* laden.c (program_name): Remove extern qualifier.

2007-12-21  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (KMEM_MAX): Set to the last valid byte, not the
	first invalid byte.

2007-11-16  Neal H. Walfield  <neal@gnu.org>

	* laden.h (program_name): Change type to a const char [].
	* laden.c (program_name): Likewise.
	* shutdown.h (program_name): Likewise.
	* output.h (debug): Change program_name's type to a const char [].

2007-08-14  Marcus Brinkmann  <marcus@gnu.org>

	* ia32-shutdown.c (reset): Swap arguments to outb_p.

2007-08-02  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (find_components): Save the correct module number.

	* loader.c (loader_add_region): When relocating a region, set the
	new start and end after calling the callback.
	
	(loader_regions_reserve): Only convert region descriptors on a V2
	kernel.

2007-07-30  Neal H. Walfield  <neal@gnu.org>

	* kip-fixup.c (kip_fixup): Use a symbolic name rather than a magic
	number.

	[_L4_X2]: Set KIP->MEMORY_INFO.NR to MEMORY_MAP_SIZE.

	* laden.c (load_components): Don't add L4 memory maps